[tool.poetry]
name = "torrentmirror"
version = "2.0.0"
description = ""
authors = ["David Francos <opensource@davidfrancos.net>"]

[tool.poetry.dependencies]
python = "^3.8"
robobrowser = "^0.5.3"
cleo = "^0.8.1"
pygogo = "^0.13.2"
docopt = "^0.6.2"
werkzeug = "0.16.1"
tabulate = "^0.8.7"
yapf = "^0.30.0"
xdg = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pylint = "^2.6.0"
flake8 = "^3.8.4"
flake8_docstrings = "^1.5.0"
tox = "^3.20.1"

[tool.poetry.scripts]
torrentmirror = "torrentmirror:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

