[metadata]
name = torrentmirror
author = David Francos Cuartero
author-email = opensource@davidfrancos.net
summary = TorrentMirror library
description-file = Readme.rst
home-page = https://github.com/XayOn/torrentmirror
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only


keywords =
    torrentmirror

[files]
packages =
    torrentmirror

[entry_points]
console_scripts =
    torrentmirror = torrentmirror:main

pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
